# intent-handler

./: .gitignore  README.md  close_loop.py  kgraph3.py  main.py  main4.py  pyproject.toml  requirements.txt
docs/: intent-fulfillment-report-example(llm-optimized).json  intent_fulfilment_schema.json
examples/: int-cov.json  int-es-strategy.json  int-es.json  int-es2-strategy.json  int-es2.json  int-thp-strategy.json  int-thp.json  intent-report.json
examples/agent_response/es1/: history_agent.txt  strategy_agent.txt  strategy_agent2.txt
examples/agent_response/es2/: history_agent.txt  strategy_agent.txt
notebook/: intentv2.ipynb
result/LM-response/20250610/: iter1_prompt.txt  iter1_resp.txt  iter2_prompt.txt  iter2_resp.txt  iter3_prompt.txt  iter3_resp.txt  iter4_prompt.txt  iter4_resp.txt  iter5_prompt.txt  iter5_resp.txt
result/LM-response/20250614/: iter0_prompt.txt  iter0_resp.txt  iter1_prompt.txt  iter1_resp.txt  iter2_prompt.txt  iter2_resp.txt  iter3_prompt.txt  iter3_resp.txt  iter4_prompt.txt  iter4_resp.txt
result/LM-response/20250617/: iter0_prompt.txt  iter0_resp.txt  iter1_prompt.txt  iter1_resp.txt  iter2_prompt.txt  iter2_resp.txt  iter3_prompt.txt  iter3_resp.txt  iter4_prompt.txt  iter4_resp.txt  iter5_prompt.txt  iter5_resp.txt
src/: agent_registry.py  netconf_cli.py  pm_data.py  specialized_agent.py  state.py
tools/: kgraph_intent_json.py
